tests/negative/test_decl_bad_id_nonfirst.orb
fnc main() {
    let i32 x = 100, "y" = 200;
}